# session_20260702_171441_a01c90f6

./: .gitignore  EXECUTION_COMPLETE.md  EXECUTIVE_SUMMARY.md  QUICKSTART.md  README.md  STAGE1_COMPLETE.md  STAGE2_IMPLEMENTATION_REPORT.md  STAGE2_VERIFICATION.md  STAGE6_COMPLETION_CERTIFICATE.md  STAGE6_HAND_OFF.md  pyproject.toml  reproduce.sh
knowledge_base/: 01_literature_review.md  02_methodology_specs.md  citation_graph_ARXIV_2404.0165.json
literature/: 2404.01650v2.html
manuscript/: main.tex  references.bib
results/: STAGE3_COMPLETION_REPORT.md  STAGE4_VERIFICATION_REPORT.md  STAGE5_COMPLETION_SUMMARY.md  STAGE5_EXECUTION_REPORT.md  STAGE6_COMPLETION_CHECKLIST.txt  STAGE6_FINAL_STATUS.md  STAGE6_FINAL_SUMMARY.md  stage3_comparison.csv  stage3_comparison.json  stage3_component_ablation.csv  stage3_hyperparam_ablation.csv  stage3_summary.json  stage6_verification_results.json  test_results.json
workflow/: compare_all_methods.py  compute_source_stats.py  data_loader.py  evaluate_baselines.py  evaluate_foa.py  foa_method.py  quantized_model.py  source_baseline.py  stage3_comprehensive_evaluation.py  stage3_synthetic_demo.py  tent_baseline.py  test_foa_basic.py  test_implementation.py  validate_results.py  verify_foa.py  verify_stage3.py  verify_stage6_completion.py
