[project]
name = "ai-research-engineer-session"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    # Core Deep Learning & ML
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "timm>=0.9.0",
    "transformers>=4.38.0",
    "datasets>=2.18.0",
    "accelerate>=0.27.0",
    "einops>=0.7.0",
    
    # Core scientific computing
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "matplotlib>=3.8.0",
    "scipy>=1.11.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.3.0",
    
    # Data formats and utilities
    "pyyaml>=6.0.0",
    "pillow>=10.0.0",
    "requests>=2.31.0",
    
    # Additional utilities
    "tqdm>=4.66.0",
    "plotly>=5.17.0",
    "wandb>=0.16.0",
    
    # Environment management
    "python-dotenv>=1.0.0",
]
